// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ApproveJoinDialog (snapshots) > renders a +N more waiting caption when the queue has more pending requests 1`] = `
<div
  class="modal-panel relative w-full max-w-md max-h-[90vh] overflow-y-auto rounded-xl bg-white p-6 shadow-xl dark:bg-neutral-900"
>
  <button
    aria-label="Close dialog"
    class="absolute right-4 top-4 rounded-md p-1 text-neutral-400 transition-colors hover:bg-neutral-100 hover:text-neutral-600 focus-visible:ring-2 focus-visible:ring-neutral-400 dark:text-neutral-500 dark:hover:bg-neutral-800 dark:hover:text-neutral-300"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-x"
      fill="none"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6 6 18"
      />
      <path
        d="m6 6 12 12"
      />
    </svg>
  </button>
  <div
    class="space-y-5"
  >
    <div
      class="flex items-center gap-3"
    >
      <span
        aria-hidden="true"
        class="inline-block h-8 w-8 rounded-full"
        style="background-color: rgb(204, 102, 153);"
      />
      <div>
        <h2
          class="text-lg font-semibold"
        >
          Someone wants to join
        </h2>
        <p
          class="mt-0.5 text-sm text-neutral-600 dark:text-neutral-400"
        >
          <span
            class="font-medium text-neutral-900 dark:text-neutral-100"
          >
            Alice
          </span>
           
          is requesting access to your collaborative session.
        </p>
      </div>
    </div>
    <p
      class="rounded-md border border-neutral-200 bg-neutral-50 px-3 py-2 text-xs text-neutral-600 dark:border-neutral-800 dark:bg-neutral-900 dark:text-neutral-400"
    >
      +
      2
       more waiting
    </p>
    <div
      class="flex justify-end gap-3 pt-2"
    >
      <button
        class="rounded-md px-4 py-2 text-sm font-medium text-neutral-700 transition-colors hover:bg-neutral-100 dark:text-neutral-300 dark:hover:bg-neutral-800"
        type="button"
      >
        Decline
      </button>
      <button
        class="rounded-md bg-primary-600 px-4 py-2 text-sm font-medium text-white transition-all duration-150 hover:bg-primary-700 disabled:opacity-50 focus-visible:ring-2 focus-visible:ring-primary-400 dark:bg-primary-500 dark:text-white dark:hover:bg-primary-400"
        type="button"
      >
        Approve
      </button>
    </div>
  </div>
</div>
`;

exports[`ApproveJoinDialog (snapshots) > renders the approval prompt for a single pending guest 1`] = `
<div
  class="modal-panel relative w-full max-w-md max-h-[90vh] overflow-y-auto rounded-xl bg-white p-6 shadow-xl dark:bg-neutral-900"
>
  <button
    aria-label="Close dialog"
    class="absolute right-4 top-4 rounded-md p-1 text-neutral-400 transition-colors hover:bg-neutral-100 hover:text-neutral-600 focus-visible:ring-2 focus-visible:ring-neutral-400 dark:text-neutral-500 dark:hover:bg-neutral-800 dark:hover:text-neutral-300"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-x"
      fill="none"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6 6 18"
      />
      <path
        d="m6 6 12 12"
      />
    </svg>
  </button>
  <div
    class="space-y-5"
  >
    <div
      class="flex items-center gap-3"
    >
      <span
        aria-hidden="true"
        class="inline-block h-8 w-8 rounded-full"
        style="background-color: rgb(204, 102, 153);"
      />
      <div>
        <h2
          class="text-lg font-semibold"
        >
          Someone wants to join
        </h2>
        <p
          class="mt-0.5 text-sm text-neutral-600 dark:text-neutral-400"
        >
          <span
            class="font-medium text-neutral-900 dark:text-neutral-100"
          >
            Alice
          </span>
           
          is requesting access to your collaborative session.
        </p>
      </div>
    </div>
    <div
      class="flex justify-end gap-3 pt-2"
    >
      <button
        class="rounded-md px-4 py-2 text-sm font-medium text-neutral-700 transition-colors hover:bg-neutral-100 dark:text-neutral-300 dark:hover:bg-neutral-800"
        type="button"
      >
        Decline
      </button>
      <button
        class="rounded-md bg-primary-600 px-4 py-2 text-sm font-medium text-white transition-all duration-150 hover:bg-primary-700 disabled:opacity-50 focus-visible:ring-2 focus-visible:ring-primary-400 dark:bg-primary-500 dark:text-white dark:hover:bg-primary-400"
        type="button"
      >
        Approve
      </button>
    </div>
  </div>
</div>
`;
